--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -49,13 +49,18 @@ input[type='button'] {
 }
 #newTask {
   padding-left: 20px;
-  min-width: 420px;
-  max-width: 700px;
+  padding-top: 10px;
+  min-width: 500px;
+  max-width: 800px;
   min-height: 100px;
   max-height: 200px;
   border-radius: 10px;
   border: 2px solid #f03;
   outline: none;
+  @media screen and (max-width: 530px) {
+    min-width: 300px;
+    max-width: 300px;
+  }
 }
 #char_count {
   color: #000;
@@ -81,12 +86,22 @@ input[type='button'] {
     height: 40px;
 
     & p {
-      font-size: 30px;
+      font-size: 12px;
+      @media screen and (min-width: 500px) {
+        font-size: 30px;
+      }
       color: #fff;
     }
     &__wrapper {
       display: flex;
       gap: 10px;
+      @media screen and (max-width: 500px) {
+        & input[type='button'] {
+          height: 30px;
+          width: 70px;
+          font-size: 10px;
+        }
+      }
     }
   }
   & .done {
