--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -74,7 +74,7 @@ input[type='button'] {
   width: 80%;
   gap: 20px;
   padding-right: 20px;
-  max-height: 80%;
+
   overflow-y: auto;
   padding-bottom: 50px;
 
@@ -83,7 +83,7 @@ input[type='button'] {
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    height: 40px;
+    max-height: 60px;
 
     & p {
       font-size: 12px;
