--- a/src/partials/todo.html
+++ b/src/partials/todo.html
@@ -12,6 +12,7 @@
       ></textarea>
       <span id="char_count">100/100</span>
     </div>
+    <button type="button" id="submit">test</button>
   </form>
   <h2>List task</h2>
   <ul class="todo-list"></ul>
