--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -117,13 +117,25 @@ input[type='button'] {
 .box {
   padding-top: 50px;
   padding-bottom: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  & h2 {
+    color: #fff;
+  }
 
   --border-size: 10px;
 
@@ -143,15 +155,18 @@ input[type='button'] {
   background-position: center center;
   background-repeat: no-repeat;
 
+  -webkit-animation: bg-spin 3s linear infinite;
+
   animation: bg-spin 3s linear infinite;
-  @keyframes bg-spin {
+  @-webkit-keyframes bg-spin {
     to {
       --border-angle: 1turn;
     }
   }
-
-  & h2 {
-    color: #fff;
+  @keyframes bg-spin {
+    to {
+      --border-angle: 1turn;
+    }
   }
 }
 
@@ -160,3 +175,48 @@ input[type='button'] {
   inherits: true;
   initial-value: 0turn;
 }
+// .box {
+//   padding-top: 50px;
+//   padding-bottom: 100px;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   & h2 {
+//     color: #fff;
+//   }
+
+//   --border-size: 10px;
+
+//   --border-angle: 0turn;
+//   width: 100%;
+//   height: 100%;
+//   background-image: conic-gradient(
+//       from var(--border-angle),
+//       #213,
+//       #112 50%,
+//       #213
+//     ),
+//     conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
+//   background-size: calc(100% - (var(--border-size) * 2))
+//       calc(100% - (var(--border-size) * 2)),
+//     cover;
+//   background-position: center center;
+//   background-repeat: no-repeat;
+
+//   animation: bg-spin 3s linear infinite;
+//   @keyframes bg-spin {
+//     to {
+//       --border-angle: 1turn;
+//     }
+//   }
+// }
+
+// @property --border-angle {
+//   syntax: '<angle>';
+//   inherits: true;
+//   initial-value: 0turn;
+// }
