--- a/src/partials/todo.html
+++ b/src/partials/todo.html
@@ -11,10 +11,10 @@
         maxlength="100"
       ></textarea>
       <span id="char_count">100/100</span>
+      <button type="button" id="submit" class="button">Create task</button>
     </div>
-    <button type="button" id="submit">test</button>
   </form>
   <h2>List task</h2>
   <ul class="todo-list"></ul>
-  <input type="button" value="Clear all" id="clearList" />
+  <input type="button" value="Clear all" id="clearList" class="button" />
 </div>
