--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -19,6 +19,10 @@ body {
   }
 }
 input[type='button'] {
+  transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   width: 120px;
   font-size: 15px;
@@ -43,7 +47,24 @@ input[type='button'] {
 .todo-container {
   width: 600px;
 }
-
+.menu {
+  fill: #f03;
+}
+.showBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(42, 32, 82);
+  cursor: pointer;
+  border: 2px solid #f03;
+  border-radius: 10px;
+  outline: none;
+  width: 40px;
+  height: 40px;
+  @media screen and (max-width: 500px) {
+    font-size: 30px;
+  }
+}
 .newtask-box {
   margin-bottom: 25px;
   display: flex;
@@ -84,6 +105,7 @@ input[type='button'] {
   right: 10px;
   bottom: 10px;
 }
+
 .todo-list {
   display: flex;
   flex-direction: column;
@@ -111,6 +133,13 @@ input[type='button'] {
     &__wrapper {
       display: flex;
       gap: 10px;
+
+      &:hover input[type='button'] {
+        display: block;
+      }
+      & input[type='button'] {
+        display: none;
+      }
       @media screen and (max-width: 500px) {
         & input[type='button'] {
           height: 30px;
@@ -125,6 +154,7 @@ input[type='button'] {
     color: rgb(118, 108, 255);
   }
 }
+
 #clearList {
   position: absolute;
   bottom: 50px;
