--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -79,6 +79,7 @@ input[type='button'] {
 }
 .textarea__wrapper {
   position: relative;
+  margin-bottom: 10px;
 }
 #newTask {
   padding-left: 20px;
