fix speed animation

--- a/src/partials/todo.html
+++ b/src/partials/todo.html
@@ -2,14 +2,14 @@
   <form action="#" class="newtask-box">
     <h1>New task</h1>
     <div class="textarea__wrapper">
-      <textarea
+      <input
         type="text"
         id="newTask"
         name="newTask"
         placeholder="Enter dimensions and press Enter"
-        rows="3"
+        rows="2"
         maxlength="100"
-      ></textarea>
+      />
       <span id="char_count">100/100</span>
     </div>
     <button type="button" id="submit" class="button">Create task</button>
