--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -120,9 +120,13 @@ input[type='button'] {
     gap: 20px;
     max-height: 60px;
 
+    &:hover p {
+      @media screen and (max-width: 500px) {
+        display: none;
+      }
+    }
     & p {
       font-size: 12px;
-
       @media screen and (min-width: 500px) {
         font-size: 30px;
       }
@@ -135,7 +139,7 @@ input[type='button'] {
       &:hover input[type='button'] {
         display: block;
       }
-      & input[type='button'] {
+      &:hover & input[type='button'] {
         display: none;
       }
       @media screen and (max-width: 500px) {
