--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -119,7 +119,6 @@ input[type='button'] {
     justify-content: space-between;
     gap: 20px;
     max-height: 60px;
-
     &:hover p {
       @media screen and (max-width: 500px) {
         display: none;
@@ -127,6 +126,7 @@ input[type='button'] {
     }
     & p {
       font-size: 12px;
+
       @media screen and (min-width: 500px) {
         font-size: 30px;
       }
@@ -139,7 +139,8 @@ input[type='button'] {
       &:hover input[type='button'] {
         display: block;
       }
-      &:hover & input[type='button'] {
+
+      & input[type='button'] {
         display: none;
       }
       @media screen and (max-width: 500px) {
