--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -119,12 +119,6 @@ input[type='button'] {
     justify-content: space-between;
     gap: 20px;
     max-height: 60px;
-    &:hover p {
-      @media screen and (max-width: 500px) {
-        display: none;
-      }
-    }
-
     & p {
       font-size: 12px;
 
@@ -225,48 +219,6 @@ input[type='button'] {
   inherits: true;
   initial-value: 0turn;
 }
-// .box {
-//   padding-top: 50px;
-//   padding-bottom: 100px;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   & h2 {
-//     color: #fff;
-//   }
-
-//   --border-size: 10px;
-
-//   --border-angle: 0turn;
-//   width: 100%;
-//   height: 100%;
-//   background-image: conic-gradient(
-//       from var(--border-angle),
-//       #213,
-//       #112 50%,
-//       #213
-//     ),
-//     conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
-//   background-size: calc(100% - (var(--border-size) * 2))
-//       calc(100% - (var(--border-size) * 2)),
-//     cover;
-//   background-position: center center;
-//   background-repeat: no-repeat;
-
-//   animation: bg-spin 3s linear infinite;
-//   @keyframes bg-spin {
-//     to {
-//       --border-angle: 1turn;
-//     }
-//   }
-// }
-
-// @property --border-angle {
-//   syntax: '<angle>';
-//   inherits: true;
-//   initial-value: 0turn;
-// }
+.shown {
+  display: none;
+}
