--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -99,8 +99,9 @@ input[type='button'] {
 #char_count {
   color: #000;
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+  right: 6px;
+  bottom: 6px;
+  font-size: 10px;
 }
 
 .todo-list {
