--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -66,7 +66,10 @@ input[type='button'] {
   }
 }
 .newtask-box {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
+  @media screen and (min-width: 530px) {
+    margin-bottom: 25px;
+  }
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,6 +78,7 @@ input[type='button'] {
     justify-content: center;
     color: #fff;
     font-size: 30px;
+    margin-top: 0;
   }
 }
 .textarea__wrapper {
