--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -50,6 +50,7 @@ input[type='button'] {
 .menu {
   fill: #f03;
 }
+
 .showBtn {
   display: flex;
   justify-content: center;
@@ -61,6 +62,7 @@ input[type='button'] {
   outline: none;
   width: 40px;
   height: 40px;
+
   @media screen and (max-width: 500px) {
     font-size: 30px;
   }
@@ -139,7 +141,6 @@ input[type='button'] {
       &:hover input[type='button'] {
         display: block;
       }
-
       & input[type='button'] {
         display: none;
       }
@@ -224,6 +225,8 @@ input[type='button'] {
   inherits: true;
   initial-value: 0turn;
 }
-.shown {
-  display: none;
+.showText {
+  @media screen and (max-width: 500px) {
+    display: none;
+  }
 }
