--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -137,6 +137,7 @@ input[type='button'] {
     &__wrapper {
       display: flex;
       gap: 10px;
+      align-items: center;
 
       &:hover input[type='button'] {
         display: block;
